<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/constraintInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_entire_tree"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:orientation="horizontal">



        <Button
            android:id="@+id/cancelButton"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text"
            android:text="@string/cancel"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="blocksDescendants" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text"
            android:text="@string/ok"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />




    </LinearLayout>

</LinearLayout>