<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/konane_2"
    tools:context="edu.ramapo.rshresth.konane.GameActivity"
    tools:layout_editor_absoluteY="25dp">


    <LinearLayout
        android:id="@+id/BlackWhiteRow"
        android:layout_width="512dp"
        android:layout_height="64dp"
        android:layout_marginEnd="145dp"
        android:layout_marginStart="145dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/switchBlack"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/black"
            android:checked="true" />

        <TextView
            android:id="@+id/textScoreBlack"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/black"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp" />

        <Switch
            android:id="@+id/switchWhite"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/white"
            android:checked="false" />


        <TextView
            android:id="@+id/textScoreWhite"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/white"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="35sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="213dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:background="@drawable/text"
        android:text="@string/reset"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BlackWhiteRow" />

    <Button
        android:id="@+id/CompMakeMove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="CompMakeMove"
        app:layout_constraintBottom_toTopOf="@+id/tableButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toEndOf="@+id/buttonReset"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892" />

    <TableLayout
        android:id="@+id/tableButtons"
        android:layout_width="799dp"
        android:layout_height="568dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/konane_2"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset">


    </TableLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="747dp"
        android:layout_height="376dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/status_tv"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableButtons">

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="441dp"
            android:layout_height="229dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="68dp"
            android:text="@string/status"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="247dp"
            tools:layout_editor_absoluteY="699dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="162dp"
        android:layout_height="292dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableButtons">

        <Spinner
            android:id="@+id/spinnerAlgorithm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text"
            android:entries="@array/algorithmn_list"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/text"
            android:text="@string/next"
            android:textSize="40sp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/text"
            android:text="@string/save"
            android:textSize="40sp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
